Infört korr i kapitlet för trafik.

--- a/tex/kap-trafik.tex
+++ b/tex/kap-trafik.tex
@@ -35,8 +35,8 @@ ett agitationsrum för sådana frågor.
 
 \textbf{Svordomar}, \textbf{könsord} och liknande undviker vi helt. Språket
 skall vara vårdat men behöver inte vara strikt. Tänk på att din motpart är
-inte den enda som lyssnar utan det finns \textit{andra amatörer som lyssnar},
-icke-amatörer som lyssnar, myndigheter som lyssnar och så vidare.
+inte den enda som lyssnar utan det finns \textit{andra radioanvändare som
+  lyssnar}, myndigheter och så vidare.
 
 Ha \textbf{förståelse} för att andra kanske inte har dina egna
 detaljkunskaper, professionalism med mera. Agera \textbf{ödmjukt} gentemot
@@ -55,9 +55,9 @@ respektive signaler på ett \emph{tydligt och läsligt sätt}, i dag finns det e
 tendens att sluddra över signalerna framför allt på 2m och 70cm banden, gör
 inte det. Tydlighet är en vinning i sig.
 
-När någon ny i ringen inträder, räkna upp de deltagande signalerna så att
-personen tydligt får en bild av alla som är med och vem som är på turen före
-och efter hen.
+När någon ny kommer in i ett så kallat ring-QSO, är det en bra idé att räkna
+upp de deltagande signalerna så att personen tydligt får en bild av alla som
+är med och vem som är på turen före och efter i ringen.
 
 Vi pratar inte \textbf{nedvärderande} om personer varesig de är andra amatörer
 eller ej, eller en viss grupp av personer. Vi undviker \textbf{sexuella
@@ -125,32 +125,31 @@ Här är inte alla länder med utan de vanligaste som körs från Sverige.
 
 \subsection{Svenska signaler}
 
-Svenska signaler förekommer inom ett antal prefix. Enligt ITU disponerar Sverige
-förljande signalserier: 7SA--7SZ samt 8SA--8SZ och vidare de mer kända SAA--SMZ.
-Dessa har används till varierande ändamål, exempelvis har flyget signaler i
-serien SE-AAA--ZZZ. Polisen har tidigare använt signaler i serien SHA plus fyra
-siffror, detta är nu ersatt med nytt system i.o.m. RAKEL. Räddningstjänsten
-använde SDA med fyra siffror. Signaler som 7SA + 4 siffror används för mindre
-yrkesbåtar SC+4 siffror för fritidsbåtar.
+Svenska signaler förekommer inom ett antal prefix. Enligt ITU disponerar
+Sverige förljande signalserier: 7SA--7SZ samt 8SA--8SZ och vidare de mer kända
+SAA--SMZ. Dessa har används till varierande ändamål, exempelvis har flyget
+signaler i serien SE-AAA--ZZZ.
 
-Amatörradion använder ett antal signaler, de viktigaste är:
+Polisen har tidigare använt signaler i serien SHA plus fyra siffror, detta är
+nu ersatt med nytt system i.o.m. RAKEL. Räddningstjänsten använde SDA med fyra
+siffror. Signaler som 7SA + 4 siffror används för mindre yrkesbåtar SC+4
+siffror för fritidsbåtar.
+
+Amatörradion använder ett antal flera olika prefix, de viktigaste är:
 
 \begin{tabular}{ll}
-	SM & Amatörradiosignal utdelad av PTS (nya huvudsignaler tilldelas ej i
-        serien) \\ SA & Amatörradiosignal tilldelad av SSA \\
-    SK & Klubbsignaler
-        (som regel tvåställiga efter distriktsiffran) \\
-       & numera tilldelas även
-         klubbar SA-signaler som är tvåställiga efter distriktssiffran \\
-    SL & Militära signaler (som regel två- eller treställiga efter
-         distriktsiffran)
+  SM & Amatörradiosignal utdelad av PTS (nya huvudsignaler tilldelas ej i serien)          \\
+  SA & Amatörradiosignal tilldelad av SSA för HAREC-certifierade sändaramatörer            \\
+  SH & Amatörradiosignal tilldelad av SSA för instegsradioamatörer                         \\
+  SK & Klubbsignaler (som regel tvåställiga efter distriktsiffran)                         \\
+     & numera tilldelas även klubbar SA-signaler som är tvåställiga efter distriktssiffran \\
+  SL & Militära signaler (som regel två- eller treställiga efter distriktsiffran)
 \end{tabular}
 
-Dessa signaler följs av en \textit{distriktsiffra} se särskilt avsnitt och sedan
-2-ställiga eller 3-ställiga bokstavskombinationer som är den personliga
-signalen. Exempel är SM0UEI som är min egen signal, distriktsiffran är 0 dvs
-hemmavarande i Stockholms län. Ett annat exempel kan vara SK5JV tidigare
-Fagersta amatörradioklubb.
+Dessa signaler följs av en \textit{distriktsiffra} se särskilt avsnitt och
+sedan 2-ställiga eller 3-ställiga bokstavskombinationer som är den personliga
+signalen. Exempel är SM5UEI som är min egen signal, distriktsiffran är 5 då
+jag är bosatt i Uppsala län.
 
 Repeatrar som tillhör klubbar får ofta signal efter klubben med tillägg /R för
 repeater.
@@ -163,7 +162,7 @@ Som suffix används följande:
 
 \begin{tabular}{ll}
 	/M  & Mobil (rörlig) sändaramatör, även portabel \\
-	/MM & Mobil till sjöss (mobil maritime)          \\
+	/MM & Mobil till sjöss (mobil maritim)           \\
 	/AM & Mobil i luften (aeromobile)                \\
 	/P  & Portabel (för stunden uppsatt station)     \\
 	/R  & Repeaterstation
@@ -200,10 +199,11 @@ Sverige delas in i följande distrikt efter sina län:
           \href{https://SSA.SE}{ssa.se}}
 \end{figure}
 
-Distrikten förekommer som siffra i utdelade anropssignaler. Radioamatörer byter
-inte distriktsiffra under resa i annat distrikt, i stället används suffix
-(tillägg efter ordinarie signal) som t.ex. /M för mobil. Ofta uppger man ''SM0UEI
-mobilt i SM3-land'' (SM0UEI/3/M) ibland (SM0UEI/3M) för att påvisa att man
+Distrikten förekommer som siffra i utdelade anropssignaler. Radioamatörer
+byter inte distriktsiffra under resa i annat distrikt, i stället används
+suffix (tillägg efter ordinarie signal) som t.ex. /M för mobil. Ofta uppger
+man ''SM0UEI mobilt i SM3-land'' (SM0UEI/3/M) ibland (SM0UEI/3M -- ''Sigurd
+Marting Noll Urban Erik Ivar streck Tre Mobil'') för att påvisa att man
 befinner sig utanför ordinarie distrikt.
 
 En radioamatör kan byta sin distriktsiffra om den sänder från ett annat distrikt
@@ -212,9 +212,11 @@ för det distrikt man befinner sig i. En stockholmsamatör som befinner sig i
 Gävleborgs län kan alltså antingen använda SM3UEI eller SM0UEI/3 även med
 tillägget M för mobil och P för portabel om man så önskar.
 
-Det unika för en radioamatörs signal är alltså prefixet + suffixet, som exempel
-är identifieraren för SM0UEI prefixet SM och suffixet UEI eftersom
-distriktsiffran kan ändra sig.
+Det unika för en radioamatörs signal är alltså prefixet + suffixet, som
+exempel är identifieraren för SM0UEI prefixet SM och suffixet UEI eftersom
+distriktsiffran kan ändra sig. För nyblivna instegsamatörer med SH-signal
+reserveras också motsvarande suffix även i SA-serien i tre år så man kan
+uppgradera och behålla sin signal men bara byta SH mot SA.
 
 \section{Terminologi och trafik}
 
@@ -268,14 +270,16 @@ distriktsiffran kan ändra sig.
 \clearpage
 
 \subsection{Q-koder}
-I tabellen listas några av de vanligast förekommande Q-koderna på amatörradiobanden.
-Det finns förstås många fler koder men detta anses som de vanligaste.
+I tabellen listas några av de vanligast förekommande Q-koderna på
+amatörradiobanden.  Det finns förstås många fler koder och de används då
+främst inom flyget och lite inom marinen. Dessa är ett axplock av de
+vanligaste som en radiooperatör på amatörradio eller liknande bör känna till.
 
 \begin{longtable}{ll}
 	\textbf{Kod} & \textbf{Fråga / Svar}                                                \\ \hline
 	\endhead
 	\caption{Q-koder}                                                                   \\
-\endlastfoot
+\endlastfoot                                                                        
 	QRA          & Vad heter er station?                                                \\
                      & Vår station heter ...                                                \\ \hline
 	QRB          & Hur långt bort från min station befinner ni er?                      \\
@@ -337,40 +341,32 @@ Det finns förstås många fler koder men detta anses som de vanligaste.
                      & Rätt tid är ...                                                      \\
 \end{longtable}
 
-\subsection{Lokator}\label{sec:lokator}
-
-Lokator (Maidenhead locator) är ett praktiskt sätt att tala om sin ungefärliga
-position genom att ange endast sex stycken tecken. En lokator kan t.ex. se ut
-som JO89VK vilket täcker in nordvästa Järfälla. Det finns många verktyg för att
-räkna på lokator där ute, det är bra att känna sin egen. Det finns appar för
-detta till telefonerna som både kan räkna på bäring, distans mellan två rutor
-och dessutom via telefonens GPS bestämma vilken lokator du för närvarande
-befinner dig i.
-
-Första paret dela in jorden i 18x18 fält, dvs 20 grader per fält longitud och 10
-grader per fält latitud. Varje sådant fält delas sedan in i 10x10 rutor som
-numreras 0-9 på vardera axeln. Dessa i sin tur delas sedan in i 24x24 smårutor
-som då får storleksordningen 2.5 grader latitud och 5 grader long. vardera.
-
-
-
 \section{Repeatrar}
 
-Repeatrars syfte är främst att förlänga kommunikationen från mobila och portabla
-amatörsändare. Samtal mellan fasta stationer förekommer men om ni hör varandra
-på direkten, övergå gärna till en simplex-frekvens i stället för att belägga
-repeatern.
-
-Lämna luckor mellan er när ni växlar station som sänder. Gör det möjligt för
-andra att ''breaka-in'' särskilt om ert QSO fortsätter under längre tid. Ta
-hänsyn till att andra kanske vill använda repeatern för att nå personer som de
-inte kan nå annars. Hänsyn åt båda hållen förutsätts här.
-
-Repeatern är en begränsad resurs. Det är inte okay att lägga beslag på den under
-långa perioder när andra kanske behöver den, var ödmjuk inför att någon driver
-repeatern och har satt upp den i första hand för att supporta mobila stationer.
+Repeatrars syfte är främst att förlänga kommunikationen från mobila och
+portabla amatörsändare. Samtal mellan fasta stationer förekommer också
+relativt ofta.
 
 Nödtrafik har alltid prioritet.
+
+\subsection{Uppträdande}
+
+Lämna luckor mellan er när ni växlar station som sänder. Gör det möjligt för
+andra att bryta in med ett 'break'' särskilt om ert QSO fortsätter under
+längre tid. Ta hänsyn till att andra kanske vill använda repeatern för att nå
+personer som de inte kan nå annars. Hänsyn åt båda hållen förutsätts här.
+
+Om ni når varandra på en direktfrekvens är det oftast bättre att använda den
+än att ta repeatern i anspråk. Repeatern är en samlingsplats och tänk också på
+att det ofta är väldigt många som lyssnar på de samtal som förs över en
+repeater.
+
+\subsection{Begränsad resurs}
+
+Repeatern är en begränsad resurs. Det är inte okay att lägga beslag på den
+under långa perioder när andra kanske behöver den, var ödmjuk inför att någon
+driver repeatern och har satt upp den i första hand för att supporta mobila
+stationer.
 
 \section{Radiosamtal -- QSO}
 
