--- a/tex/kap-teknik.tex
+++ b/tex/kap-teknik.tex
@@ -529,9 +529,24 @@ distriktsiffran.
 \caption{Distrikt och CTCSS-toner}
 \end{table}
 
-\section{Lokator enligt Maidenhead}
+\section{Lokator enligt Maidenheadsystemet}
 \index{lokator}
 \index{maidenhead}
+\label{sec:lokator}
+
+Lokator (Maidenhead locator) är ett praktiskt sätt att tala om sin ungefärliga
+position genom att ange endast sex stycken tecken. En lokator kan t.ex. se ut
+som JO89VK vilket täcker in nordvästa Järfälla. Det finns många verktyg för
+att räkna på lokator där ute, det är bra att känna sin egen. Det finns appar
+för detta till telefonerna som både kan räkna på bäring, distans mellan två
+rutor och dessutom via telefonens GPS bestämma vilken lokator du för
+närvarande befinner dig i.
+
+Första paret dela in jorden i 18x18 fält, dvs 20 grader per fält longitud och
+10 grader per fält latitud. Varje sådant fält delas sedan in i 10x10 rutor som
+numreras 0-9 på vardera axeln. Dessa i sin tur delas sedan in i 24x24 smårutor
+som då får storleksordningen 2.5 grader latitud och 5 grader long. vardera.
+
 
 Maidenhed Locator System används bland annat av radioamatörer för att peka ut
 positioner, räkna ut avstånd mellan två olika positioner och liknande. Man
