--- a/tex/kap-frekvenser.tex
+++ b/tex/kap-frekvenser.tex
@@ -7,8 +7,8 @@ Här hittar du frekvenslistor för ett stort gäng olika radioanvändare från
 Marin VHF och MF/HF till kanaler för jakt och kortdistansradio,
 amatörradiobandplaner, amatörradiofyrar, med mera.
 
-Uppdelningen är gjort mellan så kallade ''allmänna frekvenser'' som inte kräver
-certifikat eller andra tillstånd samt ''amatörradio'' som kräver
+Uppdelningen är gjort mellan så kallade ''allmänna frekvenser'' som inte
+kräver certifikat eller andra tillstånd samt ''amatörradio'' som kräver
 amatörradiolicens. Vissa frekvenser listas dock trots de kräver tillstånd som
 exempel marin VHF och MF/HF då dessa kan tänkas ses som av stort
 allmänintresse.
@@ -45,10 +45,10 @@ frekvensband, MF kan vara mellansignalen oavsett frekvens efter omvandling i
 en superheterodynmottagare och LF, ibland benämnt AF (audiofrekvens) är det
 hörbara ljudet, dvs den modulation som används på signalen.
 
-På engelska används i stället be\-nämn\-ing\-ar\-na RF för radio frequency, IF
-för intermediate frequency and AF för audio frequency vilket rekommenderas då
-sammanblandningsrisk med ITU-be\-nämn\-ing\-ar\-na på spektrum inte
-föreligger.
+På engelska används i stället be\-nämn\-ing\-ar\-na RF {\it för radio
+  frequency}, IF för {\it intermediate frequency} samt AF för {\it audio
+  frequency} vilket rekommenderas då sammanblandningsrisk med
+ITU-be\-nämn\-ing\-ar\-na på spektrum inte föreligger.
 
 Amatörradioband finns inom de flesta av dessa frekvensband utom de högsta och
 lägsta frekvenserna.
@@ -121,15 +121,17 @@ lägsta frekvenserna.
 
 För radioamatörer delar man in frekvensbanden i långvåg, mellanvåg, kortvåg,
 VHF, UHF och SHF beroende på frekvens, se tabellen under avsnitt
-\ref{frekvens-vaglangd}. Dessa har lite olika utbredningsegenskaper.
+\ref{frekvens-vaglangd}. Dessa har olika utbredningsegenskaper.
 
 \subsection{Långvåg}
 
-Markvågsutbredning, relativt höga sändareffekter, tillförlitliga
+Mycket god Markvågsutbredning, relativt höga sändareffekter, tillförlitliga
 för\-bind\-el\-ser men i övre delen av frekvensbandet kortare förbindelser
-dagtid. På de lägsta frekvenserna erhålls med hög sändareffekt goda förbindelser
-på stora avstånd globalt och används även för t.ex. malmprospektering,
-kommunikation med ubåtar i undervattensläge.
+dagtid. På de lägsta frekvenserna erhålls med hög sändareffekt goda
+förbindelser på stora avstånd globalt och används även för
+t.ex. malmprospektering, kommunikation med ubåtar i undervattensläge.
+
+Det blir seriöst stora antenner för långvågssändare.
 
 \subsection{Mellanvåg}
 
@@ -513,23 +515,23 @@ användas för att inte störa närliggande kanaler. Kanalrastret är
 \label{KDR}
 \label{SRBR}
 
-Kallas även SRBR för Short Range Business Radio.  Den traditionella
-frekvenslistan ser ut som följer. En ny variant med frekvenser för
-12,5\,kHz samt 6,25\,kHz kanaler finns också ute nu och kan ses i
-tabell \ref{tab:SRBR-frekvenser}.
+Kallas även SRBR för {\it Short Range Business Radio}.  Den traditionella
+frekvenslistan ser ut som följer. En ny variant med frekvenser för 12,5\,kHz
+samt 6,25\,kHz kanaler finns också ute nu och kan ses i tabell
+\ref{tab:SRBR-frekvenser}.
 
 \begin{table}[h]
 	\centering
-\begin{tabular}{rlrl}
-	\textbf{Frekvens} & \textbf{Benämning} & \textbf{Effekt} & \textbf{Användningsområde} \\ \hline
-	          444,600 & K1                 &             2 W & Short range business radio \\
-	          444,625 & K2                 &             2 W & Short range business radio \\
-	          444,800 & K3                 &             2 W & Short range business radio \\
-	          444,825 & K4                 &             2 W & Short range business radio \\
-	          444,850 & K5                 &             2 W & Short range business radio \\
-	          444,875 & K6                 &             2 W & Short range business radio \\
-	          444,925 & K7                 &             2 W & Short range business radio \\
-	          444,975 & K8                 &             2 W & Short range business radio
+\begin{tabular}{rl}
+	\textbf{Frekvens} & \textbf{Benämning} \\ \hline
+	          444,600 & K1                 \\    
+	          444,625 & K2                 \\  
+	          444,800 & K3                 \\
+	          444,825 & K4                 \\
+	          444,850 & K5                 \\
+	          444,875 & K6                 \\
+	          444,925 & K7                 \\
+	          444,975 & K8                 \\
 \end{tabular}
 \caption{Frekvenser för SRBR}
 \end{table}
